--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+/.zig-cache/
+/zig-out/
+
+# Leave this in here for older zig versions
+/zig-cache/
