--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,15 @@
         "-Command",
         "New-Item -ItemType Directory -Force -Path ./zig-out/bin; zig build-exe ${file} -femit-bin=zig-out/bin/debug"
       ]
+    },
+    {
+      "label": "zig build-test",
+      "type": "shell",
+      "command": "powershell",
+      "args": [
+        "-Command",
+        "New-Item -ItemType Directory -Force -Path ./zig-out/bin; zig test -femit-bin=zig-out/bin/debug-test --test-no-exec ${file}"
+      ]
     }
   ]
 }
